<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/switch_fav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite_menu"
        tools:ignore="MenuTitle" />
</menu>